--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Haikus for Mona</title>
+    <title>Codespaces TODO</title>
     <link href="/css/main.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Candal|Chewy&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Haikus for Mona">
     <meta property="og:description" content="Some of the best haikus you'll ever read about our rescue dog June">
     <meta property="og:image" content="/images/sunlight.jpg">
   </head>
   <body>
-    <h1>Haikus for Mona</h1>
-    <div>
-      <% for(var i=0; i < haikus.length; i++) { %>
-        <img
-          class="mona-images"
-          src="images/<%= haikus[i].image %>" />
-        <div 
-          class="haiku-containers">
-          <p 
-            class="haikus"
-          ><%- haikus[i].text %></p>
-        </div>
-      <% } %>
+    <div class="todo-container">
+    <h2>To-Do List</h2>
+    <div class="todo">
+    <form action="/" method="POST" class="todo-header">
+    <input type="text" name="content">
+    <button type="submit"><span class="fas fa-plus"></span></button>
+    </form>
+    <ul class="todo-list">
+    <li class="todo-list-item">
+    <div class="todo-list-item-name">Some Text</div>
+    <a href="" class="edit">
+    <span class="fas fa-edit"></span>
+    </a>
+    <a href="" class="remove">
+    <span class="fas fa-times"></span>
+    </a>
+    </li>
+    </ul>
     </div>
+    </div>
+    </body>
 </html>
